// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Inline Validation Inline Validation 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 dEkRey"
      color="red"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 iGbfeP nds-icon--error"
        fill="currentColor"
        focusable="false"
        height="24px"
        mr="x1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        class="InlineValidation__Wrapper-sc-19uke1q-0 dFKyki"
      >
        <p
          class="Text-sc-15glbbx-0 gSNEe"
          color="currentColor"
          font-size="medium"
        >
          Something has gone wrong
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Inline Validation with custom content 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 dEkRey"
      color="red"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 iGbfeP nds-icon--error"
        fill="currentColor"
        focusable="false"
        height="24px"
        mr="x1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        class="InlineValidation__Wrapper-sc-19uke1q-0 dFKyki"
      >
        <p
          class="Text-sc-15glbbx-0 gSNEe"
          color="currentColor"
          font-size="medium"
        >
          Something has gone wrong.
        </p>
        <ul
          class="List-sc-1ueqoqt-0 gtzCT"
          color="currentColor"
        >
          <li
            class="ListItem-sc-3wr72f-0 fgjjlO"
            color="currentColor"
          >
            Entry must be at least 3 characters long.
          </li>
          <li
            class="ListItem-sc-3wr72f-0 fgjjlO"
            color="currentColor"
          >
            Entry must contain a number
          </li>
          <li
            class="ListItem-sc-3wr72f-0 fgjjlO"
            color="currentColor"
          >
            <a
              class="Link-sc-1fcpbo4-0 dTHbTj"
              color="blue"
              font-size="medium"
              href="https://nulogy.design/"
            >
              Custom Link
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Inline Validation with list items 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 dEkRey"
      color="red"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 iGbfeP nds-icon--error"
        fill="currentColor"
        focusable="false"
        height="24px"
        mr="x1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        class="InlineValidation__Wrapper-sc-19uke1q-0 dFKyki"
      >
        <p
          class="Text-sc-15glbbx-0 gSNEe"
          color="currentColor"
          font-size="medium"
        >
          Something has gone wrong
        </p>
        <ul
          class="List-sc-1ueqoqt-0 gtzCT"
          color="currentColor"
        >
          <li
            class="ListItem-sc-3wr72f-0 fgjjlO"
            color="currentColor"
          >
            Entry must be at least 3 characters long.
          </li>
          <li
            class="ListItem-sc-3wr72f-0 fgjjlO"
            color="currentColor"
          >
            Entry must contain a number.
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Inline Validation with only list items 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 dEkRey"
      color="red"
    >
      <svg
        aria-hidden="true"
        class="Icon-sc-150w9kl-0 iGbfeP nds-icon--error"
        fill="currentColor"
        focusable="false"
        height="24px"
        mr="x1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        class="InlineValidation__Wrapper-sc-19uke1q-0 dFKyki"
      >
        <ul
          class="List-sc-1ueqoqt-0 gtzCT"
          color="currentColor"
        >
          <li
            class="ListItem-sc-3wr72f-0 fgjjlO"
            color="currentColor"
          >
            Entry must be at least 3 characters long.
          </li>
          <li
            class="ListItem-sc-3wr72f-0 fgjjlO"
            color="currentColor"
          >
            Entry must contain a number.
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
